[package]
name = "Aegis"
version = "1.0.3"
edition = "2021"
# --- START: Required for Icon Embedding ---
build = "build.rs" 
# --- END: Required for Icon Embedding ---

[profile.release]
panic = "abort"

[dependencies]
eframe = "0.28"
egui = "0.28"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
aead = "0.5"
base64 = "0.22"
thiserror = "1.0"
arboard = "3"
zeroize = { version = "1.7", features = ["derive"] }

# --- START: Build dependency for winresource ---
[build-dependencies]
winresource = "0.1"
# --- END: Build dependency for winresource ---

[[bin]]
name = "Aegis"
path = "src/main.rs"